fixing gaps and margins

--- a/css/main.css
+++ b/css/main.css
@@ -34,11 +34,11 @@
 /* global type styling */
 :root {
     font-family: "Untitled Sans", Helvetica, Arial, sans-serif;
-    font-size: clamp(0.75rem, 1.2vw, 0.96rem);
+    font-size: clamp(0.75rem, 1.2vw, 1rem);
     /* font size variables */
     --font-size-xl: 4rem;
     --font-size-l: 3rem;
-    --font-size-m: 2rem;
+    --font-size-m: 2.25rem;
     --font-size-m2: 1.25rem;
     --font-size-base: 1rem;
     --font-size-s: 0.7rem;
@@ -572,7 +572,11 @@ img, video {
     --space: calc(var(--gap-4) * var(--ratio));
 }
 #article {
-    margin-block: var(--gap-4);
+    margin-block: var(--gap-3);
+}
+
+article > p + p {
+    margin-block-start: var(--gap-s1) !important;
 }
 #about {
     max-width: min(100%, 105ch);
